[package]
name = "h3-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h3 = { git = "https://github.com/hyperium/h3" }
h3-quinn = { git = "https://github.com/hyperium/h3" }
http = "0.2.7"
quinn = { version = "0.8", default-features = false, features = ["tls-rustls", "ring"] }
rustls = { version = "0.20", features = ["quic"] }
rustls-native-certs = "0.6.2"
structopt = "0.3.26"
tokio = { version = "1.18", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
